<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Moca</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie_item">movie item</string>
    <string name="image_poster">image poster</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="favorite">Favorite</string>
    <string name="trending_series">Trending Series</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="airing_today">Airing Today</string>
    <string name="backdrop_poster">backdrop poster</string>
    <string name="storyline">Storyline</string>
    <string name="share_button">share button</string>
    <string name="casts">Casts</string>
    <string name="loading">Loading …</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="back_button">back button</string>
    <string name="try_again_later">Error, Please Try Again Later</string>
    <string name="added_to_favorite">Added to Favorite</string>
    <string name="removed_from_favorite">Removed from Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="find_movie">Find movies you looking for . . </string>
    <string name="find_series">Find Series you looking for . . </string>
    <string name="not_found">Not Found</string>
    <string name="empty_favorites" tools:ignore="UnusedResources">You Don\'t have any favorites </string>
    <string name="title_favorite" tools:keep="@string/title_favorite">Favorite</string>
    <string name="title_mocafavorite">Module Title</string>
    <string name="input_your_name" tools:keep="@string/input_your_name">Input Your Name</string>
    <string name="input_your_name_here">Input Your Name Here</string>
    <string name="save">Save</string>

</resources>